<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single"
        >

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person_gray"
            android:title="@string/nav_profile" />

        <item
            android:id="@+id/nav_genre"
            android:icon="@drawable/ic_library_music_black"
            android:title="@string/nav_genres" />

        <item
            android:id="@+id/nav_upload"
            android:icon="@drawable/ic_upload_black"
            android:title="@string/nav_upload" />

        <item
        android:id="@+id/nav_favori"
        android:icon="@drawable/ic_favorite_black"
        android:title="@string/nav_favori" />

        <item
            android:id="@+id/nav_playlist"
            android:icon="@drawable/ic_list_black"
            android:title="@string/nav_playlist" />

        <item
            android:id="@+id/nav_notification"
            android:icon="@drawable/ic_notifications_black"
            android:title="@string/nav_notification" />

        <item
            android:id="@+id/nav_reglages"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/action_settings" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/deconnexion" />

    </group>


<!--    <group android:checkableBehavior="single"-->
<!--        android:id="@+id/sc"-->
<!--        >-->

<!--        <item-->
<!--            android:id="@+id/nav_share"-->
<!--            android:icon="@drawable/ic_menu_share"-->
<!--            android:title="Share" />-->
<!--        <item-->
<!--            android:id="@+id/nav_send"-->
<!--            android:icon="@drawable/ic_menu_send"-->
<!--            android:title="Send" />-->

<!--    </group>-->

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
