<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_tendance"
    tools:context=".TendanceActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imgnext"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/bg_button_accent"
            android:src="@drawable/ic_arrow_forward_black_24dp"
            app:layout_constraintBottom_toBottomOf="@+id/txtnext"
            app:layout_constraintEnd_toEndOf="@+id/viewpager"
            app:layout_constraintTop_toTopOf="@+id/txtnext" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="8dp"
            android:background="@color/light_grey"
            app:layout_constraintBottom_toTopOf="@id/txtstep"
            app:layout_goneMarginBottom="16dp" />


        <com.shif.peterson.tizik.customfonts.MyTextView_Ubuntu_Bold
            android:id="@+id/txtlike"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:padding="10dp"
            android:text="@string/qu_aimez_vous"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.shif.peterson.tizik.customfonts.MyTextView_Ubuntu_Regular
            android:id="@+id/txtnext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:padding="10dp"
            android:text="@string/next_str"
            android:textColor="@color/white"
            android:textSize="13.5sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imgnext"
            app:layout_constraintTop_toBottomOf="@+id/viewpager" />


        <com.shif.peterson.tizik.customfonts.MyTextView_Ubuntu_Regular
            android:id="@+id/txtstep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="16dp"
            android:padding="10dp"
            android:text="@string/etape_1_sur_2"
            android:textColor="@color/white"
            android:textSize="13.5sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viewpager" />


        <com.shif.peterson.tizik.utilis.NonSwipeableViewPager
            android:id="@+id/viewpager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toTopOf="@id/divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtlike"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <com.wang.avi.AVLoadingIndicatorView
        android:id="@+id/avi"
        style="@style/AVLoadingIndicatorView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:visibility="gone"
        app:indicatorColor="@color/white"
        app:indicatorName="LineScalePulseOutRapidIndicator"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />




</FrameLayout>